--- a/WebTools/src/i18n/locales/pt-BR/translations.json
+++ b/WebTools/src/i18n/locales/pt-BR/translations.json
@@ -883,6 +883,8 @@
     "CharacterType.name.cadet": "Cadete",
     "CharacterType.name.child": "Criança",
     "CharacterType.name.other": "Outro",
+    "CharacterType.name.cardassian": "União Cardassiana",
+    "CharacterType.name.romulan": "Império Estelar Romulano",
 
     "EarlyOutlook.MilitaryOrExploration": "Frota Estelar",
 
